CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(LRUCache VERSION 1.0.0 LANGUAGES CXX)

SET(CMAKE_CXX_COMPILER clang++)
SET(CMAKE_CXX_STANDARD 20)

MESSAGE(STATUS "CMAKE_PROJECT_NAME: ${CMAKE_PROJECT_NAME}")
MESSAGE(STATUS "CMAKE_CXX_STANDARD: ${CMAKE_CXX_STANDARD}")
MESSAGE(STATUS "CMAKE_SOURCE_DIR: ${CMAKE_SOURCE_DIR}")

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
