FILE(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/src/*.h)

MESSAGE(STATUS "SOURCES: ${SOURCES}")

ADD_LIBRARY(lru_cache SHARED ${SOURCES})
SET_TARGET_PROPERTIES(lru_cache PROPERTIES LINKER_LANGUAGE CXX)
TARGET_LINK_LIBRARIES(lru_cache ${DEPS})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} main.cpp)
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} lru_cache ${DEPS})
